# Nyanga-Read

./: .eslintignore  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  LICENSE  Nyanga-Read-debug.spec  Nyanga-Read-linux-debug.spec  Nyanga-Read-linux-onedir-debug.spec  Nyanga-Read-linux.spec  Nyanga-Read-windows.spec  Nyanga-Read.spec  README.md  dev-app-update.yml  electron-builder.json  electron-builder.yml  main.js  nodemon.json  package.json  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-linux.txt  requirements-win.txt  requirements.txt  svelte.config.js  tailwind.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-ubuntu.yml  build-windows.yml  build.yml  build_release.yml  createrelease.yml
docs/app/: about.md  version.json
layout/: .gitignore  index.html  package.json  svelte.config.js
layout/_app/: version.json
layout/about/: testing.html
layout/modules/: pywebview-interfaces.js
layout/src/: app.css  app.html
modules/database/: database-legacy.js  database.js  testdb.js
modules/event/: main.event.js
modules/init/: init.js
modules/preload/: preload.js
nyanga/: .eslintignore  .gitignore  .prettierignore  buildtool.py  main.py  package.json  svelte.config.js
nyanga/src/: app.html  hooks.client.ts
nyanga/window/: window.py
scripts/requirements/: requirements-linux.txt  requirements-win.txt
scripts/specfile/: Nyanga-Read-debug.spec  Nyanga-Read-linux.spec  Nyanga-Read-opensuse.spec  Nyanga-Read-ubuntu.spec  Nyanga-Read-windows.spec
src/: app.css  app.html  hooks.client.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
static/module/: pywebview-interfaces.js
template/src/: app.html
window/: app.py  benchmark.py  mem_prof.py  profiler.py  server.py
window/api/: __init__.py  api.py
window/server/: __init__.py  server.py
window/utils/: __init__.py  arg_parser.py  extension.py  resources.py  storage_initializer.py  temp_attribute.py  (+1 more)
(+241 files in other folders)
