[tool.poetry]
name = "nyanga"
version = "3.0.8"
description = "Manga Reader for desktop powered by sveltekit, mangadex, and pywebview."
authors = ["IDNatte <idnatte@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/IDNatte/Nyanga-Read"
maintainers = ["IDNatte"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.3"
pywebview = "^5.1"
flask-cors = "^4.0.1"
pycairo = "^1.26.1"
pygobject = "^3.48.2"
requests = "^2.32.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy-serializer = "^1.4.21"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.7.0"

[tool.poetry.scripts]
start_ui = "nyanga.buildtool:start_ui"
dev = "nyanga.main:app"
ui_install = "nyanga.buildtool:install_ui_dep"
build_ui = "nyanga.buildtool:build_ui"
build_fedora = "nyanga.buildtool:build_fedora"
build_debian = "nyanga.buildtool:build_debian"
build_windows = "nyanga.buildtool:build_linux"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
